<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, LotusLakeActivity!</string>
    <string name="app_name">Lotus Lake</string>
    <string name="lotusLake">Dragon and Tiger Pagodas</string>
    <string name="qrcode">QR code</string>
    <string name="qrcodeCamera">See QR code嗎？\n Scan it！\n Special experience！\n Even discount it！</string>
    <string name="talk">當地話語</string>
    <string name="guide">我的導覽</string>
    <string name="scene">景點商家</string>
    <string name="map">地圖指引</string>
    <string name="traffic">交通方式</string>
    <string name="time">Opening 6:00 ~ 22:00</string>
    <string name="introduce">The towers is height of seven stores, has set up to stand on the lake. In front of the buildings have their own dragon and tiger statue, the visitors can as the tower’s body as road, entering the dragon’s mouth and coming out from the tiger’s mouth, it means auspicious.</string>

</resources>